--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather",
+  "name": "or-weather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "dotenv": "^8.2.0",
     "express-favicon": "^2.0.1",
+    "nodemon": "^2.0.7",
     "primeicons": "^4.1.0",
     "primereact": "^6.0.0",
     "react": "^17.0.1",
